fix image issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,10 @@ a {
     text-align: center;
     padding-left: 30px;
   }
+
+  .img-2 {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 768px) {
